--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -223,4 +223,11 @@ nav.flexbox {
 .advertisement {
     margin: 0 auto;
     text-align:center;
+    min-height:100px;
+
+    width:100%;
+    
+    @media (min-width: $bp-md) {
+        max-height: 250px;
+    }
 }
