--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -227,3 +227,7 @@ nav.flexbox {
     max-height: 500px;
     width:100%;
 }
+
+ins.adsbygoogle[data-ad-status="unfilled"] {
+    display: none !important;
+}
