--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -32,11 +32,7 @@
 						<a href="https://mickschroeder.com" rel="external">About Mick</a>
 					</li>
 					<li>
-						<a href="https://mickschroeder.com/projects" rel="external">Projects</a>
-					</li>
-					<li>
-						<a href="https://twitter.com/intent/tweet?screen_name=mick_schroeder"
-							class="twitter-mention-button" rel="external">Tweet to @mick_schroeder</a>
+						<a href="https://mickschroeder.com/software" rel="external">Other Projects</a>
 					</li>
 				</ul>
 			</nav>
