--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>Mick Schroeder's Citation and Filename Generator</title>
-	<meta name="title" content="🔥 📑 Mick Schroeder's Citation and Filename Generator">
+	<meta name="title" content="📑 Mick Schroeder's Citation and Filename Generator">
 	<meta name="description"
-		content="🔥 📑 Mick Schroeder’s automatic citation, bibliography and .PDF filename generator. Just enter a 🌐 URL, 📘 PubMed ID, 🆔 DOI, 📚 ISBN, or others… 🔥 Style with AMA, APA, APA, NLM, + 9000 more. 🔥 Skip the paywall. Find free, full-text PDF.">
+		content="📑 Mick Schroeder’s automatic citation, bibliography and .PDF filename generator. Just enter a 🌐 URL, 📘 PubMed ID, 🆔 DOI, 📚 ISBN, or others… 🔥 Style with AMA, APA, APA, NLM, + 9000 more. 🔥 Skip the paywall. Find free, full-text PDF.">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://cite.mickschroeder.com">
 	<meta property="og:image" content="https://cite.mickschroeder.com/static/images/schroeder-cite-card.png">
