--- a/src/scss/layout/_fonts.scss
+++ b/src/scss/layout/_fonts.scss
@@ -42,6 +42,7 @@
 */
 
 /* @import must be at top of file, otherwise CSS will not work */
+/* 
 @import url("//hello.myfonts.net/count/36500b");
 
 @font-face {
@@ -121,3 +122,4 @@
 		asset-url.font-url('36500B_5_0.ttf') format('truetype'),
 		asset-url.font-url('36500B_5_0.svg#wf') format('svg');
 }
+*/
