--- a/src/scss/layout/_sections.scss
+++ b/src/scss/layout/_sections.scss
@@ -1,14 +1,14 @@
 @use "../abstracts/variables";
 
 .section {
-	padding: variables.$section-padding-mobile 0;
-	border-top: 1px solid variables.$shade-2;
+  //padding: variables.$section-padding-mobile 0;
+  //border-top: 1px solid variables.$shade-2;
 
-	@media (min-width: variables.$bp-md) {
-		padding: variables.$section-padding 0;
-	}
+  @media (min-width: variables.$bp-md) {
+    //padding: variables.$section-padding 0;
+  }
 
-	.review + & {
-		border-top-color: variables.$review-border-color;
-	}
+  .review + & {
+   // border-top-color: variables.$review-border-color;
+  }
 }
