--- a/src/html/faq.hbs
+++ b/src/html/faq.hbs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ZoteroBib FAQ</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="/static/tailwind.css">
 	<link rel="stylesheet" type="text/css" href="/static/bib.css">
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
