--- a/src/html/hydrate.hbs
+++ b/src/html/hydrate.hbs
@@ -5,6 +5,7 @@
 	<title>ZoteroBib: Fast, free bibliography generator - MLA, APA, Chicago, Harvard citations</title>
 	<meta name="description" content="Free, accurate citation and bibliography maker for APA, Chicago, Harvard, MLA, and 10,000 other styles. No ads, no downloads, no account required.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="/static/tailwind.css">
 	<link rel="stylesheet" type="text/css" href="/static/bib.css">
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
