--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -5,12 +5,9 @@
 	<title>ZoteroBib: Fast, free bibliography generator - MLA, APA, Chicago, Harvard citations</title>
 	<meta name="description" content="Free, accurate citation and bibliography maker for APA, Chicago, Harvard, MLA, and 10,000 other styles. No ads, no downloads, no account required.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="/static/tailwind.css">
 	<link rel="stylesheet" type="text/css" href="/static/bib.css">
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-	<link rel="preload" href="/static/fonts/36500B_2_0.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="/static/fonts/36500B_3_0.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="/static/fonts/36500B_4_0.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="/static/fonts/36500B_5_0.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
 	<main id="zotero-bib"></main>
