--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -1,14 +1,14 @@
 .brand {
-	width: 188px;
-	height: 38px;
-	margin: auto;
+	// width: 188px;
+	// height: 38px;
+	// margin: auto;
 
 	a {
-		display: block;
-		height: 100%;
-		position: relative;
-		text-indent: -9999px;
-		overflow: hidden; // Needed for Firfox focus state
+		// display: block;
+		// height: 100%;
+		// position: relative;
+		// text-indent: -9999px;
+		// overflow: hidden; // Needed for Firfox focus state
 
 		svg {
 			position: absolute;
