--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,12 +1,12 @@
 @use "../abstracts/variables";
 
 
-.container {
-	max-width: variables.$container-width;
-	margin: auto;
-	padding: 0 (variables.$grid-gutter-width * 0.5);
+// .container {
+// 	max-width: variables.$container-width;
+// 	margin: auto;
+// 	padding: 1em (variables.$grid-gutter-width * 0.5);
 
-	@media (min-width: variables.$bp-md) {
-		width: calc(100% - #{variables.$space-xxl});
-	}
-}
+// 	@media (min-width: variables.$bp-md) {
+// 		width: calc(100% - #{variables.$space-xxl});
+// 	}
+// }
