--- a/src/scss/layout/_section-brand.scss
+++ b/src/scss/layout/_section-brand.scss
@@ -4,9 +4,9 @@
 	padding-top: variables.$section-padding-mobile - 9px;
 	padding-bottom: variables.$space-xl - 7px;
 
-	@media print {
-		display: none;
-	}
+	//@media print {
+	//	display: none;
+	//}
 
 	@media (min-width: variables.$bp-md) {
 		padding-top: variables.$section-padding - 9px;
