--- a/src/scss/bib.scss
+++ b/src/scss/bib.scss
@@ -24,7 +24,7 @@
 @use "components/dnd";
 @use "../../modules/web-common/scss/icon";
 @use "components/button";
-@use "components/review";
+//@use "components/review";
 @use "components/bibliography-section";
 @use "components/bibliography";
 @use "../../modules/web-common/scss/select";
