--- a/src/scss/layout/_section-cite.scss
+++ b/src/scss/layout/_section-cite.scss
@@ -14,10 +14,22 @@
 		position: absolute;
 		right: variables.$grid-gutter-width * 0.5;
 		top: variables.$space-sm;
-		cursor: pointer;
+		display: flex;
+		align-items: center;
+		gap: variables.$space-sm;
+		cursor: default;
 
-		a + a {
-			margin-left: variables.$space-md;
+		[data-slot="navigation-menu"] {
+			display: flex;
+		}
+
+		[data-slot="navigation-menu-list"] {
+			gap: variables.$space-sm;
+		}
+
+		button,
+		a {
+			cursor: pointer;
 		}
 	}
 
