--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<title>ZoteroBib: Fast, free bibliography generator - MLA, APA, Chicago, Harvard citations</title>
-	<meta name="description" content="Free, accurate citation and bibliography maker for APA, Chicago, Harvard, MLA, and 10,000 other styles. No ads, no downloads, no account required.">
+	<title>Mick Schroeder's Citation Generator</title>
+	<meta name="description" content="Free and open-source software that automatically suggests citations and helps write a bibliography for you.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/static/tailwind.css">
 	<link rel="stylesheet" type="text/css" href="/static/bib.css">
