--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/bib.css">
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body className="text-foreground font-sans antialiased">
 	<main id="zotero-bib"></main>
 	<script id="zotero-bib-config" type="application/json">
 		{{{json indexConfig}}}
