--- a/src/scss/bib.scss
+++ b/src/scss/bib.scss
@@ -19,7 +19,7 @@
 @use "layout/messages";
 @use "layout/inline-feedback";
 @use "layout/faq";
-@use "layout/footer";
+//@use "layout/footer";
 @use "components/cite-tools";
 @use "components/dnd";
 @use "../../modules/web-common/scss/icon";
