--- a/src/html/faq.hbs
+++ b/src/html/faq.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/tailwind.css" />
     <link rel="stylesheet" type="text/css" href="/static/bib.css" />
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <nav><a href="/" class="back-link">Back to ZoteroBib</a></nav>
