--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/tailwind.css" />
     <link rel="stylesheet" type="text/css" href="/static/bib.css" />
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon" />
   </head>
   <body className="text-foreground font-sans antialiased">
     <main id="zotero-bib"></main>
