--- a/src/scss/bib.scss
+++ b/src/scss/bib.scss
@@ -18,12 +18,12 @@
 @use "layout/badge";
 @use "layout/messages";
 @use "layout/inline-feedback";
-@use "layout/faq";
+//@use "layout/faq";
 //@use "layout/footer";
 @use "components/cite-tools";
 @use "components/dnd";
-@use "../../modules/web-common/scss/icon";
-@use "components/button";
+//@use "../../modules/web-common/scss/icon";
+//@use "components/button";
 //@use "components/review";
 @use "components/bibliography-section";
 @use "components/bibliography";
