--- a/src/html/faq.hbs
+++ b/src/html/faq.hbs
@@ -21,7 +21,9 @@
     <!-- Main content -->
     <main class="mx-auto max-w-5xl px-4 py-8 pb-24 flex-1 w-full">
       <section class="surface-card p-6 md:p-8">
-        <article class="prose prose-stone dark:prose-invert prose-headings:scroll-mt-24 prose-a:underline-offset-2 prose-a:text-primary">
+        <article
+          class="prose prose-stone dark:prose-invert prose-headings:scroll-mt-24 prose-a:underline-offset-2 prose-a:text-primary"
+        >
           {{{faq}}}
         </article>
       </section>
@@ -29,6 +31,5 @@
 
     <script src="/static/main.js"></script>
 
-   
   </body>
 </html>
