--- a/src/html/hydrate.hbs
+++ b/src/html/hydrate.hbs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/tailwind.css" />
     <link rel="stylesheet" type="text/css" href="/static/bib.css" />
-    <link rel="shortcut icon" href="/static/favicon.png" type="image/png" />
+    <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
   </head>
   <body><main id="zotero-bib" data-hydrate-items-count="2"><div
         class="zotero-bib-container read-only"
