--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -25,7 +25,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/tailwind.css" />
     <link rel="stylesheet" type="text/css" href="/static/bib.css" />
-    <link rel="shortcut icon" href="/static/favicon.png" type="image/png" />
+    <link rel="icon" href="/static/icons/icon.svg" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="/static/icons/icon-192.png"
+      sizes="192x192"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/static/icons/apple-touch-icon.png"
+      sizes="180x180"
+    />
+    <link rel="manifest" href="/static/site.webmanifest" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://cite.mickschroeder.com" />
     <meta name="twitter:creator" content="@mick_schroeder" />
@@ -38,7 +50,6 @@
       name="twitter:description"
       content="Generate citations instantly from PubMed, journals, websites, and books. Free, open-source, and ad-supported."
     />
-    <link rel="manifest" href="/static/site.webmanifest" />
     <meta name="theme-color" content="#1e50a0" />
     <!-- Google adsense (adsbygoogle.js) -->
     <script
