--- a/src/html/hydrate.hbs
+++ b/src/html/hydrate.hbs
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>ZoteroBib: Fast, free bibliography generator - MLA, APA, Chicago,
+    <title>Mick Schroeder's Citation Generator: Fast, free bibliography generator - MLA, APA, Chicago,
       Harvard citations</title>
     <meta
       name="description"
