--- a/src/scss/bib.scss
+++ b/src/scss/bib.scss
@@ -16,7 +16,7 @@
 @use "layout/section-about";
 @use "layout/section-brand";
 @use "layout/badge";
-@use "layout/messages";
+//@use "layout/messages";
 @use "layout/inline-feedback";
 //@use "layout/faq";
 //@use "layout/footer";
