--- a/src/html/hydrate.hbs
+++ b/src/html/hydrate.hbs
@@ -1,8 +1,8 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Mick Schroeder's Citation Generator: Fast, free bibliography generator - MLA, APA, Chicago,
-      Harvard citations</title>
+    <title>Mick Schroeder's Citation Generator: Fast, free bibliography
+      generator - MLA, APA, Chicago, Harvard citations</title>
     <meta
       name="description"
       content="Free, accurate citation and bibliography maker for APA, Chicago, Harvard, MLA, and 10,000 other styles. No ads, no downloads, no account required."
