--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -20,7 +20,7 @@
     />
     <meta property="og:site_name" content="cite.mickschroeder.com" />
     <meta name="author" content="Mick Schroeder, LLC" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/tailwind.css" />
