--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -87,8 +87,8 @@
       "name": "Mick Schroeder, LLC" } }
     </script>
   </head>
-  <body className="text-foreground font-sans antialiased">
-    <main id="zotero-bib"></main>
+  <body className="">
+    <main id="zotero-bib" ></main>
     <script id="zotero-bib-config" type="application/json">
       {{{json indexConfig}}}
     </script>
