--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @layer base {
+
   @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
@@ -206,6 +207,9 @@
 }
 
 @layer components {
+
+   
+  section h3 {
   .link {
     color: var(--primary);
   }
